--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,17 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [tool.poetry.scripts]
+dplex = 'deployplex.main:cli'
 deployplex = 'deployplex.main:cli'
+
+
 
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.1.7"
+python-dotenv = "^1.0.0"
+requests = "^2.31.0"
+pydantic = "^2.3.0"
 
 
 [build-system]
