--- a/action.yaml
+++ b/action.yaml
@@ -14,7 +14,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: curl -fsSL https://dosei.ai/install.sh | sh
+    - run: |
+        curl -fsSL https://dosei.ai/install.sh | sh
+        echo "DOSEI_CLI_INSTALL=/home/runner/.dosei" >> $GITHUB_ENV
+        echo "PATH=$DOSEI_CLI_INSTALL/bin:$PATH" >> $GITHUB_ENV
       shell: bash
     - run: echo "DOSEI_TOKEN=${{ inputs.token }}" >> $GITHUB_ENV
       if: ${{ inputs.token }}
