--- a/action.yaml
+++ b/action.yaml
@@ -14,11 +14,9 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: curl -fsSL https://dosei.ai/install.sh | sh
-      shell: bash
     - run: |
-        echo "DOSEI_CLI_INSTALL=/home/runner/.dosei" >> $GITHUB_ENV
-        echo "$DOSEI_CLI_INSTALL/bin" >> $GITHUB_PATH
+        curl -fsSL https://dosei.ai/install.sh | sh
+        echo "/home/runner/.dosei/bin" >> $GITHUB_PATH
       shell: bash
     - run: echo "DOSEI_TOKEN=${{ inputs.token }}" >> $GITHUB_ENV
       if: ${{ inputs.token }}
