--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup dctl CLI
+      - name: Setup dosei CLI
         uses: ./
 
-      - name: Test dctl
-        run: dctl --version
+      - name: Test dosei
+        run: dosei --version
